Pom xml updated