@@ -16,13 +16,13 @@
 	<properties>
 		<spring-ai.version>1.0.0-M6</spring-ai.version>
 		<spring-cloud.version>2024.0.0</spring-cloud.version>
-		<lombok.version>1.18.34</lombok.version>
+		<lombok.version>1.18.38</lombok.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>21</java.version>
-		<maven.compiler.source>21</maven.compiler.source>
-		<maven.compiler.target>21</maven.compiler.target>
+		<java.version>24</java.version>
+		<maven.compiler.source>24</maven.compiler.source>
+		<maven.compiler.target>24</maven.compiler.target>
 
 	</properties>
 	<dependencies>
@@ -86,7 +86,7 @@
 		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-observation</artifactId>
-			<version>1.12.0</version> <!-- Compatible with Spring Boot 3.4.4 -->
+			<version>1.12.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-analyzers-common -->
 		<dependency>
@@ -179,7 +179,7 @@ spring-ai-tika-document-reader: This dependency provides the Spring AI integrati
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
-			<version>2.15.0</version> <!-- Use the version that matches your Jackson version -->
+			<version>2.15.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -240,7 +240,6 @@ spring-ai-tika-document-reader: This dependency provides the Spring AI integrati
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.1.2</version>
 				<configuration>
-					<argLine>--enable-preview</argLine> <!-- If using Java 21 preview features -->
 					<forkCount>1</forkCount>
 					<reuseForks>true</reuseForks>
 					<testFailureIgnore>false</testFailureIgnore>
